# QT_ultrasound_processing_cmake

./: .gitignore  README.md
basic_plus_ImageSeg/: CMakeLists.txt  customgraphicsscene.cpp  customgraphicsscene.h  jetcolormap.cpp  jetcolormap.h  main.cpp  ultrasound_cscan_seg.cpp  ultrasound_cscan_seg.h
basic_plus_imageProcessing/: CMakeLists.txt  as_2d_process_class.cpp  as_2d_process_class.h  graphwindow.cpp  graphwindow.h  imageplotwidget.cpp  imageplotwidget.h  main.cpp  myopenglwidget.cpp  myopenglwidget.h  ultrasound_cscan_process_2das.cpp  ultrasound_cscan_process_2das.h  vertexShaderSource.cpp
basic_read/: CMakeLists.txt  fftprocessing.cpp  fftprocessing.h  main.cpp  npy.hpp  orthosliceviewer.cpp  orthosliceviewer.h  trimdialog.cpp  trimdialog.h  ultrasound_cscan_process.cpp  ultrasound_cscan_process.h  utils.cpp  utils.h
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-c4ab7aed8ba9e92ebe1d.json  cmakeFiles-v1-892a853b6a6246860967.json  codemodel-v2-948e072785b1aa54fa8b.json  index-2023-11-30T03-42-26-0299.json
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-f81493cdfb1ef461b7cc.json  directory-.-Debug-652754d54bb1b749776d.json  index-2023-11-30T03-26-12-0442.json  target-basic_plus_ImageSeg-Debug-2d4998d6536f7c15b776.json
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: _mingw.h.9063BC30453243F3.idx  align.h.4C4EF99306C09C24.idx  allocated_ptr.h.95627CC6742827C3.idx  array.25E9866757CEF9AF.idx  atomic_base.h.9E887311C28BEF8A.idx  auto_ptr.h.1589B15250F603E2.idx  basic_string.h.3EA6F3E3C03CF711.idx  bit.FA145B867C105A18.idx  char_traits.h.B438352A03EE1153.idx  cstdlib.77936E530E4CBA75.idx  customgraphicsscene.h.2F2CBD111DACC12B.idx  execution_defs.h.C022BE8934A12FEF.idx  glue_memory_defs.h.70C303086177FE43.idx  invoke.h.DB988924DCB1B33E.idx  main.cpp.2159BD6F602A3C24.idx  refwrap.h.59F884F6F3D2F5DF.idx  shared_ptr.h.68992A1576396FB9.idx  shared_ptr_atomic.h.8E21CDEAB2CB0092.idx  shared_ptr_base.h.8B9E1B90955C5A83.idx  stdlib.h.8D1B849F925680B2.idx  stdlib.h.D92D616567CD7C26.idx  stl_function.h.7AA784877DC3C96E.idx  stl_raw_storage_iter.h.4FD711A69F43C097.idx  stl_relops.h.2EB7BAF40896FA63.idx  stl_tempbuf.h.72F780832F9AEC43.idx  stl_uninitialized.h.FD9EBBB08537D2BA.idx  streambuf.76776BBBF64C19DC.idx  streambuf_iterator.h.7A741CDD50DD371B.idx  tuple.2FC5ACF5359CC6D4.idx  type_traits.EF1DD7E3AB38D0D3.idx  ultrasound_cscan_seg.h.C7B7462076A54E72.idx  unique_ptr.h.1E0FA4B852FA8CF1.idx  uses_allocator.h.773760631A23EFDD.idx  utility.66741444D7C6F204.idx
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Release/.qt/: QtDeploySupport.cmake
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Release/.qtc_clangd/: compile_commands.json
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Release/YourProjectName_autogen/: deps
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Release/YourProjectName_autogen/EWIEGA46WW/: moc_customgraphicsscene.cpp.d  moc_ultrasound_cscan_seg.cpp.d
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Release/YourProjectName_autogen/GUJ6HQIFZV/: moc_qcustomplot.cpp.d  moc_trimdialog.cpp.d  moc_ultrasound_cscan_process.cpp.d
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Release/basic_plus_ImageSeg_autogen/: deps  mocs_compilation.cpp
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Release/basic_plus_ImageSeg_autogen/EWIEGA46WW/: moc_customgraphicsscene.cpp.d  moc_ultrasound_cscan_seg.cpp.d
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Release/basic_plus_ImageSeg_autogen/GUJ6HQIFZV/: moc_qcustomplot.cpp.d  moc_trimdialog.cpp.d  moc_ultrasound_cscan_process.cpp.d
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Release/basic_read_autogen/: deps  mocs_compilation.cpp
build-basic_plus_ImageSeg-Desktop_Qt_6_4_3_MinGW_64_bit-Release/basic_read_autogen/EWIEGA46WW/: moc_customgraphicsscene.cpp.d  moc_ultrasound_cscan_seg.cpp.d
build-basic_read-Desktop_Qt_6_4_3_MinGW_64_bit-MinSizeRel/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-basic_read-Desktop_Qt_6_4_3_MinGW_64_bit-MinSizeRel/.qt/: QtDeploySupport.cmake
build-basic_read-Desktop_Qt_6_4_3_MinGW_64_bit-MinSizeRel/.qtc_clangd/: compile_commands.json
build-basic_read-Desktop_Qt_6_4_3_MinGW_64_bit-RelWithDebInfo/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-basic_read-Desktop_Qt_6_4_3_MinGW_64_bit-RelWithDebInfo/.qt/: QtDeploySupport.cmake
build-basic_read-Desktop_Qt_6_4_3_MinGW_64_bit-RelWithDebInfo/.qtc_clangd/: compile_commands.json
build-basic_read-Desktop_Qt_6_4_3_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-basic_read-Desktop_Qt_6_4_3_MinGW_64_bit-Release/.qt/: QtDeploySupport.cmake
build-basic_read-Desktop_Qt_6_4_3_MinGW_64_bit-Release/.qtc_clangd/: compile_commands.json
build-basic_read-Desktop_Qt_6_4_3_MinGW_64_bit-Release/basic_read_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-basic_read-Desktop_Qt_6_4_3_MinGW_64_bit-Release/basic_read_autogen/EWIEGA46WW/: moc_qcustomplot.cpp.d  moc_trimdialog.cpp.d  moc_ultrasound_cscan_process.cpp.d
(+265 files in other folders)
